# DNAnnot

./: .gitignore  README.md  README.rst  pyproject.toml  setup.py
DNAnnot/: Snakefile  __init__.py  dnannot-complete.sh  global_variables.py  main.py  module.py
DNAnnot/Additional_files/: config_cluster_slurm.yaml
DNAnnot/install_files/: cluster_config_SLURM.yaml  config.yaml  tools_path.yaml
DNAnnot/parser/: __init__.py  global_variables.py  install.py  module.py  module_config.py  run.py  usefull_function.py
DNAnnot/scripts/: mergeBraker_augustus.py  reformat_gff_braker.py  renameGFF.py  report.Rmd  retrieve_annotation_quality.py
