[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools_scm[toml]>=6.2"
]


[tool.setuptools_scm]
write_to = "DNAnnot/_version.py"
version_scheme="release-branch-semver"
tag_regex="^(\\d.\\d.\\d)-*\\w*\\d*$"
local_scheme = "no-local-version"

[project]
name = "DNAnnot"
dynamic = ["version"]
description = "TODO !!!!!"
authors = [
    {name = "Charriat Florian",email = "florian.charriat@cirad.fr"},
]
dependencies = ["snakecdysis", "PyYAML", "click>=8.0.3", "cookiecutter", "docutils", "python-gitlab", "snakemake", "tqdm"]
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["snakemake", "wrapper", "installation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: CeCILL-C Free Software License Agreement (CECILL-C)",
    "License :: Free for non-commercial use",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/FlorianCHA/DNAnnot"
Downloads = "https://github.com/FlorianCHA/DNAnnot/archive/"
"Bug Tracker" = "https://github.com/FlorianCHA/DNAnnot/issues"
Documentation = "https://DNAnnot.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/FlorianCHA/DNAnnot"

[project.optional-dependencies]
dev = [
    "sphinx_click",
    "sphinx_copybutton",
    "sphinx_rtd_theme",
    "tox",
]

[project.scripts]
DNAnnot = "DNAnnot.main:main"

[project.entry-points.DNAnnot]
DNAnnot = "__init__"

